# fastapi_quickstart

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yaml  alembic.ini  cli.py  compose.yml  docker-compose.yml  example.env  gunicorn.conf.py  loggers.py  pyproject.toml  settings.py
apps/: __main__.py  main.py
apps/CORE/: custom_types.py  db.py  dependencies.py  enums.py  exceptions.py  handlers.py  helpers.py  managers.py  models.py  repositories.py  responses.py  schemas.py  services.py  tables.py  types.py  utils.py
apps/CORE/schemas/: mixins.py  requests.py  responses.py  schemas.py
apps/authorization/: dependencies.py  enums.py  exceptions.py  handlers.py  managers.py  middlewares.py  models.py  routers.py  schemas.py  services.py  tables.py
apps/authorization/schemas/: __init__.py  requests.py  responses.py  schemas.py
apps/todos/: enums.py  handlers.py  models.py  routers.py  schemas.py  services.py
apps/users/: enums.py  handlers.py  models.py  routers.py  schemas.py  services.py
apps/users/schemas/: requests.py  responses.py  schemas.py
apps/wishmaster/: enums.py  handlers.py  models.py  routers.py  schemas.py  services.py  tables.py
libs/core/: pyproject.toml
libs/core/core/: custom_types.py  exceptions.py  helpers.py  repositories.py
libs/core/core/custom_logging/: formatters.py
libs/core/core/db/: bases.py  mixins.py  repositories.py
libs/core/core/dependencies/: __init__.py  limiters.py
libs/core/core/dependencies/body/: filtration.py  pagination.py  projection.py  searching.py  sorting.py
libs/core/core/managers/: passwords.py  schemas.py  settings.py  tokens.py
libs/core/core/schemas/: requests.py  responses.py
libs/core/src/core/: annotations.py  custom_types.py  enums.py  exceptions.py  helpers.py  repositories.py
libs/core/src/core/custom_logging/: __init__.py  formatters.py  loggers.py  settings.py
libs/core/src/core/db/: bases.py  mixins.py  settings.py  tables.py
libs/core/src/core/dependencies/: __init__.py  limiters.py
libs/core/src/core/dependencies/body/: filtration.py  pagination.py  projection.py  sorting.py
libs/core/src/core/managers/: settings.py  tokens.py
libs/core/src/core/schemas/: fields.py  responses.py  schemas.py
libs/domain/: pyproject.toml
libs/domain/domain/authorization/: handlers.py  services.py  tables.py
libs/domain/domain/authorization/schemas/: responses.py
libs/domain/domain/users/: services.py  tables.py
libs/domain/domain/users/schemas/: requests.py
libs/domain/src/domain/authorization/: dependencies.py  exceptions.py  handlers.py  managers.py  middlewares.py  tables.py
libs/domain/src/domain/users/: handlers.py  tables.py
libs/domain/src/domain/users/schemas/: responses.py  schemas.py
migrations/: Taskfile.yaml  env.py  script.py.mako
migrations/sql_versions/: 0001.sql  0002.sql  0003.sql  0004.sql
migrations/versions/: 0001_initial.py  0002_todos.py  0002_users_and_authorization.py  0003_users.py  0003_wishes.py  0004_authorization.py
migrations/versions_sql/: 0001.sql
redis/: Dockerfile  gen-test-cert.sh  redis.conf
redis/certs/: ca.crt  ca.key  client.crt  client.key  redis.crt  redis.dh  redis.key  server.crt  server.key
src/: settings.py
src/api/: __main__.py  exception_handlers.py  lifespan.py  responses.py  routers.py  tables.py
src/api/apps/health_checks/: handlers.py
src/api/apps/tokens/: handlers.py
src/api/apps/users/: handlers.py
src/api/authorization/: dependencies.py  handlers.py  managers.py  model.conf  services.py  tables.py
src/api/authorization/schemas/: requests.py  responses.py  schemas.py
src/api/users/: handlers.py  routers.py  services.py
src/api/users/schemas/: responses.py  schemas.py
src/api/wishmaster/: handlers.py  routers.py  schemas.py  services.py  tables.py
tests/: Taskfile.yaml  bases.py  conftest.py
tests/apps/: conftest.py  test_main.py
tests/apps/CORE/: factories.py  test_db.py  test_dependencies.py  test_exceptions.py  test_handlers.py  test_managers.py  test_schemas.py  test_tables.py  test_types.py  test_utils.py
tests/apps/authorization/: factories.py  test_exceptions.py  test_models.py  test_routers.py
tests/apps/todos/: factories.py  test_models.py  test_services.py
tests/apps/users/: factories.py  test_models.py  test_routers.py  test_schemas.py
tests/apps/wishmaster/: factories.py  test_models.py  test_schemas.py  test_services.py
tests/migrations/: test_migrations_base.py
