[project]
name = "core"
authors = [
    {name = "Kostiantyn Salnykov", email = "kostiantyn.salnykov@gmail.com"},
]
version = "0.0.1"
description = "Core library with shared functionality"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "pydantic-settings>=2.7.1",
    "advanced-alchemy>=0.27.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "core/**/*.py"
]

[tool.hatch.build.targets.wheel]
packages = ["core", ]
