[project]
name = "domain"
authors = [
    {name = "Kostiantyn Salnykov", email = "kostiantyn.salnykov@gmail.com"},
]
version = "0.0.1"
description = "Domain library with domain objects, services and schemas."
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.7.1",
    "advanced-alchemy>=0.27.1",
]

[tool.hatch.build.targets.sdist]
only-include = ["src/domain"]

[tool.hatch.build.targets.wheel]
only-include = ["src/domain"]
