[project]
name = "domain"
authors = [
    {name = "Kostiantyn Salnykov", email = "kostiantyn.salnykov@gmail.com"},
]
version = "0.0.1"
description = "Domain library with domain objects, services and schemas."
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.7.1",
    "advanced-alchemy>=0.27.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".gitignore",
    "README.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "domain/**/*.py"
]

[tool.hatch.build.targets.wheel]
packages = ["domain"]
